Tmux 2.8 to 2.9 migration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ unbind-key l
 bind-key l select-pane -R \;
 
 set-window-option -g mode-keys vi
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style 'bg=red'
 
 # No confirm on pane close
 #bind-key x kill-pane
@@ -24,17 +24,15 @@ set -g window-style 'fg=colour247,bg=colour236'
 set -g window-active-style 'fg=colour250,bg=black'
 
 # Set the pane border colors
-set -g pane-border-fg colour250
-set -g pane-border-bg colour236
-set -g pane-active-border-fg colour250
-set -g pane-active-border-bg colour250
+set -g pane-border-style 'fg=colour250,bg=colour236'
+set -g pane-active-border-style 'fg=colour250,bg=colour250'
 
 # Bindings for splitting the window, with the current path
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Highlight window in status bar
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style 'bg=red'
 
 # Plugin to persist tmux environment across system restarts
 set -g @plugin 'tmux-plugins/tmux-resurrect'
