--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,10 +14,13 @@ unbind-key l
 bind-key l select-pane -R \;
 
 set-window-option -g mode-keys vi
-set-window-option -g window-status-current-style 'bg=red'
 
 # No confirm on pane close
 #bind-key x kill-pane
+
+# Plugin for color schemes
+#set -g @plugin 'jimeh/tmux-themepack'
+#set -g @themepack 'basic'
 
 # Set inactive/active window styles
 set -g window-style 'fg=colour247,bg=colour236'
@@ -30,9 +33,6 @@ set -g pane-active-border-style 'fg=colour250,bg=colour250'
 # Bindings for splitting the window, with the current path
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
-
-# Highlight window in status bar
-set-window-option -g window-status-current-style 'bg=red'
 
 # Plugin to persist tmux environment across system restarts
 set -g @plugin 'tmux-plugins/tmux-resurrect'
