Tmux highlight current window in status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,9 @@ set -g pane-active-border-style 'fg=colour250,bg=colour250'
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Highlight window in status bar
+set-window-option -g window-status-current-style 'bg=red'
+
 # Plugin to persist tmux environment across system restarts
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-capture-pane-contents 'on'
