tmux conf cleanup

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g prefix C-f
 bind C-f send-prefix
 
 # Vi mode
+set-window-option -g mode-keys vi
+
 unbind-key j
 bind-key j select-pane -D \;
 unbind-key k
@@ -13,10 +15,6 @@ bind-key h select-pane -L \;
 unbind-key l
 bind-key l select-pane -R \;
 
-set-window-option -g mode-keys vi
-
-# No confirm on pane close
-#bind-key x kill-pane
 
 # Set inactive/active window styles
 set -g window-style 'fg=colour247,bg=colour236'
@@ -27,8 +25,8 @@ set -g pane-border-style 'fg=colour250,bg=colour236'
 set -g pane-active-border-style 'fg=colour250,bg=colour250'
 
 # Bindings for splitting the window, with the current path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # Highlight window in status bar
 set-window-option -g window-status-current-style 'bg=red'
