--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,3 +33,5 @@ set-window-option -g window-status-current-style 'bg=red'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g focus-events on
