increase tmux scroll back buffer size

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,3 +35,6 @@ set-window-option -g window-status-current-style 'bg=red'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g focus-events on
+
+# Increase scrollback buffer size
+set-option -g history-limit 5000
