--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,7 @@
 {
   "typescript.suggest.autoImports": true,
-  "javascript.suggest.autoImports": true
+  "javascript.suggest.autoImports": true,
+  "yaml.schemas": {
+    "kubernetes": "/*.yaml"
+  }
 }
