--- a/.gitconfig
+++ b/.gitconfig
@@ -37,11 +37,24 @@
   keepBackup = false
 [pull]
   rebase = true
+	default = current
 [filter "lfs"]
   clean = git-lfs clean %f
   smudge = git-lfs smudge %f
   required = true
 [url "ssh://git@github.com/"]
-  insteadOf = https://github.com/
+	insteadOf = https://github.com/
+; [url "https://:@github.com/"]
+	; insteadOf = https://github.com/
 [init]
 	defaultBranch = main
+[url "https://:@github.com/"]
+	insteadOf = https://github.com/
+[url "git@github.com:"]
+	insteadOf = https://github.com/
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
