--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ export AWS_ACCESS_KEY_ID=""
 export GITHUB_USERNAME=""
 export PAPERTRAIL_API_TOKEN=""
 export GITHUB_API_TOKEN=""
+export OPENAI_API_KEY=""
