--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,7 +1,6 @@
-let mapleader = "."
+let mapleader = ","
 
-" plugins
-set commentary
+map <leader>cc <Action>(CommentByLineComment)
 
 " Disable arrow keys in all modes
 noremap <Up> <Nop>
@@ -18,6 +17,8 @@ vnoremap <Up> <Nop>
 vnoremap <Down> <Nop>
 vnoremap <Left> <Nop>
 vnoremap <Right> <Nop>
+
+map <leader>o :source ~/.ideavimrc<cr>
 
 " Disable mouse scrolling
 set nomouse
